<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10pt"
            android:layout_marginEnd="10pt"
            android:layout_weight="1"
            android:scaleX=".6"
            android:scaleY=".6"
            android:src="@drawable/quiz_king_ico" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/gameButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40pt"
                android:layout_marginEnd="40pt"
                android:backgroundTint="#292929"

                android:text="@string/start_game" />

            <Button
                android:id="@+id/settingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40pt"
                android:layout_marginEnd="40pt"
                android:backgroundTint="#292929"
                android:text="@string/setting" />

            <Button
                android:id="@+id/profileButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40pt"
                android:layout_marginEnd="40pt"
                android:backgroundTint="#292929"
                android:text="@string/profile" />

            <Button
                android:id="@+id/scoreboardButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40pt"
                android:layout_marginEnd="40pt"
                android:backgroundTint="#292929"
                android:text="@string/scoreboard" />

            <Button
                android:id="@+id/exitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60pt"
                android:layout_marginEnd="60pt"
                android:backgroundTint="#292929"
                android:text="@string/exit" />

        </LinearLayout>
    </LinearLayout>


</ScrollView>